Trying to solve Ex. 18

--- a/dom-exercises/addMultTable.html
+++ b/dom-exercises/addMultTable.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <h1>Add a MultTable with JavaScript DOM</h1>
-    <input type="button" value="DOM me a table" onclick="addMultTable(4, 8)" />
-
+    <div id="table"></div>
     <script src="/main.js"></script>
   </body>
 </html>
