--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning JavaScript</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h2>Hello world, I'm learning JavaScript!</h2>
+    <h1>My Favorite Bands</h1>
+    <ul id="band-list"></ul>
+    <div id="table"></div>
     <script src="./main.js"></script>
   </body>
 </html>
